Adjust to be part of System

--- a/DA2_2/Debug/makefile
+++ b/DA2_2/Debug/makefile
@@ -13,8 +13,12 @@ ORDERED_OBJS += \
 "./SystemConfig.obj" \
 "./main.obj" \
 "./tm4c123gh6pm_startup_ccs.obj" \
+"./utils/uartstdio.obj" \
 "./Timer/Timer.obj" \
+"./SENSOR_HMC5883L/Kalman.obj" \
 "./SENSOR_HMC5883L/SENSOR_HMC5883L.obj" \
+"./LineFollow/LineFollow.obj" \
+"./LineFollow/PID.obj" \
 "./Button/Button.obj" \
 "E:/ti/TivaWare_C_Series-2.1.4.178/driverlib/ccs/Debug/driverlib.lib" \
 "../tm4c123gh6pm.cmd" \
@@ -30,12 +34,16 @@ RMDIR := RMDIR /S/Q
 # All of the sources participating in the build are defined here
 -include sources.mk
 -include subdir_vars.mk
+-include utils/subdir_vars.mk
 -include Timer/subdir_vars.mk
 -include SENSOR_HMC5883L/subdir_vars.mk
+-include LineFollow/subdir_vars.mk
 -include Button/subdir_vars.mk
 -include subdir_rules.mk
+-include utils/subdir_rules.mk
 -include Timer/subdir_rules.mk
 -include SENSOR_HMC5883L/subdir_rules.mk
+-include LineFollow/subdir_rules.mk
 -include Button/subdir_rules.mk
 -include objects.mk
 
@@ -162,8 +170,8 @@ DA2_2.hex: $(EXE_OUTPUTS)
 # Other Targets
 clean:
 	-$(RM) $(EXE_OUTPUTS__QUOTED)$(BIN_OUTPUTS__QUOTED)
-	-$(RM) "SystemConfig.pp" "main.pp" "tm4c123gh6pm_startup_ccs.pp" "Timer\Timer.pp" "SENSOR_HMC5883L\SENSOR_HMC5883L.pp" "Button\Button.pp" 
-	-$(RM) "SystemConfig.obj" "main.obj" "tm4c123gh6pm_startup_ccs.obj" "Timer\Timer.obj" "SENSOR_HMC5883L\SENSOR_HMC5883L.obj" "Button\Button.obj" 
+	-$(RM) "SystemConfig.pp" "main.pp" "tm4c123gh6pm_startup_ccs.pp" "utils\uartstdio.pp" "Timer\Timer.pp" "SENSOR_HMC5883L\Kalman.pp" "SENSOR_HMC5883L\SENSOR_HMC5883L.pp" "LineFollow\LineFollow.pp" "LineFollow\PID.pp" "Button\Button.pp" 
+	-$(RM) "SystemConfig.obj" "main.obj" "tm4c123gh6pm_startup_ccs.obj" "utils\uartstdio.obj" "Timer\Timer.obj" "SENSOR_HMC5883L\Kalman.obj" "SENSOR_HMC5883L\SENSOR_HMC5883L.obj" "LineFollow\LineFollow.obj" "LineFollow\PID.obj" "Button\Button.obj" 
 	-@echo 'Finished clean'
 	-@echo ' '
 
