--- a/DA2_2/.project
+++ b/DA2_2/.project
@@ -30,5 +30,10 @@
 			<type>1</type>
 			<locationURI>TIVAWARE_INSTALL/driverlib/ccs/Debug/driverlib.lib</locationURI>
 		</link>
+		<link>
+			<name>utils/uartstdio.c</name>
+			<type>1</type>
+			<location>E:/ti/TivaWare_C_Series-2.1.4.178/utils/uartstdio.c</location>
+		</link>
 	</linkedResources>
 </projectDescription>
