--- a/DA2_2/.settings/org.eclipse.core.resources.prefs
+++ b/DA2_2/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,8 @@
 eclipse.preferences.version=1
 encoding//Debug/Button/subdir_rules.mk=UTF-8
 encoding//Debug/Button/subdir_vars.mk=UTF-8
+encoding//Debug/LineFollow/subdir_rules.mk=UTF-8
+encoding//Debug/LineFollow/subdir_vars.mk=UTF-8
 encoding//Debug/SENSOR_HMC5883L/subdir_rules.mk=UTF-8
 encoding//Debug/SENSOR_HMC5883L/subdir_vars.mk=UTF-8
 encoding//Debug/Timer/subdir_rules.mk=UTF-8
@@ -10,3 +12,5 @@ encoding//Debug/objects.mk=UTF-8
 encoding//Debug/sources.mk=UTF-8
 encoding//Debug/subdir_rules.mk=UTF-8
 encoding//Debug/subdir_vars.mk=UTF-8
+encoding//Debug/utils/subdir_rules.mk=UTF-8
+encoding//Debug/utils/subdir_vars.mk=UTF-8
