Add PID for Line Following and Movement

--- a/test/.settings/org.eclipse.core.resources.prefs
+++ b/test/.settings/org.eclipse.core.resources.prefs
@@ -5,6 +5,8 @@ encoding//Debug/Button/subdir_rules.mk=UTF-8
 encoding//Debug/Button/subdir_vars.mk=UTF-8
 encoding//Debug/EEPROM/subdir_rules.mk=UTF-8
 encoding//Debug/EEPROM/subdir_vars.mk=UTF-8
+encoding//Debug/LineFollow/subdir_rules.mk=UTF-8
+encoding//Debug/LineFollow/subdir_vars.mk=UTF-8
 encoding//Debug/QEI/subdir_rules.mk=UTF-8
 encoding//Debug/QEI/subdir_vars.mk=UTF-8
 encoding//Debug/STR/subdir_rules.mk=UTF-8
