--- a/DA2_2/.settings/org.eclipse.core.resources.prefs
+++ b/DA2_2/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
+encoding//Debug/ADC/subdir_rules.mk=UTF-8
+encoding//Debug/ADC/subdir_vars.mk=UTF-8
 encoding//Debug/Button/subdir_rules.mk=UTF-8
 encoding//Debug/Button/subdir_vars.mk=UTF-8
 encoding//Debug/LineFollow/subdir_rules.mk=UTF-8
