Add RC522 and HMC5883L libraries

--- a/test/.settings/org.eclipse.core.resources.prefs
+++ b/test/.settings/org.eclipse.core.resources.prefs
@@ -7,8 +7,12 @@ encoding//Debug/EEPROM/subdir_rules.mk=UTF-8
 encoding//Debug/EEPROM/subdir_vars.mk=UTF-8
 encoding//Debug/LineFollow/subdir_rules.mk=UTF-8
 encoding//Debug/LineFollow/subdir_vars.mk=UTF-8
+encoding//Debug/MFRC522/subdir_rules.mk=UTF-8
+encoding//Debug/MFRC522/subdir_vars.mk=UTF-8
 encoding//Debug/QEI/subdir_rules.mk=UTF-8
 encoding//Debug/QEI/subdir_vars.mk=UTF-8
+encoding//Debug/SENSOR_HMC5883L/subdir_rules.mk=UTF-8
+encoding//Debug/SENSOR_HMC5883L/subdir_vars.mk=UTF-8
 encoding//Debug/STR/subdir_rules.mk=UTF-8
 encoding//Debug/STR/subdir_vars.mk=UTF-8
 encoding//Debug/Timer/subdir_rules.mk=UTF-8
