--- a/test/Debug/makefile
+++ b/test/Debug/makefile
@@ -21,7 +21,10 @@ ORDERED_OBJS += \
 "./STR/rtGetNaN.obj" \
 "./STR/rt_nonfinite.obj" \
 "./STR/speed_control.obj" \
+"./SENSOR_HMC5883L/Kalman.obj" \
+"./SENSOR_HMC5883L/SENSOR_HMC5883L.obj" \
 "./QEI/QEI.obj" \
+"./MFRC522/RC522.obj" \
 "./LineFollow/LineFollow.obj" \
 "./LineFollow/PID.obj" \
 "./EEPROM/EEPROM.obj" \
@@ -42,7 +45,9 @@ RMDIR := RMDIR /S/Q
 -include subdir_vars.mk
 -include Timer/subdir_vars.mk
 -include STR/subdir_vars.mk
+-include SENSOR_HMC5883L/subdir_vars.mk
 -include QEI/subdir_vars.mk
+-include MFRC522/subdir_vars.mk
 -include LineFollow/subdir_vars.mk
 -include EEPROM/subdir_vars.mk
 -include Button/subdir_vars.mk
@@ -50,7 +55,9 @@ RMDIR := RMDIR /S/Q
 -include subdir_rules.mk
 -include Timer/subdir_rules.mk
 -include STR/subdir_rules.mk
+-include SENSOR_HMC5883L/subdir_rules.mk
 -include QEI/subdir_rules.mk
+-include MFRC522/subdir_rules.mk
 -include LineFollow/subdir_rules.mk
 -include EEPROM/subdir_rules.mk
 -include Button/subdir_rules.mk
@@ -180,8 +187,8 @@ test.hex: $(EXE_OUTPUTS)
 # Other Targets
 clean:
 	-$(RM) $(EXE_OUTPUTS__QUOTED)$(BIN_OUTPUTS__QUOTED)
-	-$(RM) "SystemConfig.pp" "main.pp" "tm4c123gh6pm_startup_ccs.pp" "Timer\Timer.pp" "STR\Control_initialize.pp" "STR\STR_Indirect.pp" "STR\Uocluong.pp" "STR\rtGetInf.pp" "STR\rtGetNaN.pp" "STR\rt_nonfinite.pp" "STR\speed_control.pp" "QEI\QEI.pp" "LineFollow\LineFollow.pp" "LineFollow\PID.pp" "EEPROM\EEPROM.pp" "Button\Button.pp" "ADC\ADC.pp" 
-	-$(RM) "SystemConfig.obj" "main.obj" "tm4c123gh6pm_startup_ccs.obj" "Timer\Timer.obj" "STR\Control_initialize.obj" "STR\STR_Indirect.obj" "STR\Uocluong.obj" "STR\rtGetInf.obj" "STR\rtGetNaN.obj" "STR\rt_nonfinite.obj" "STR\speed_control.obj" "QEI\QEI.obj" "LineFollow\LineFollow.obj" "LineFollow\PID.obj" "EEPROM\EEPROM.obj" "Button\Button.obj" "ADC\ADC.obj" 
+	-$(RM) "SystemConfig.pp" "main.pp" "tm4c123gh6pm_startup_ccs.pp" "Timer\Timer.pp" "STR\Control_initialize.pp" "STR\STR_Indirect.pp" "STR\Uocluong.pp" "STR\rtGetInf.pp" "STR\rtGetNaN.pp" "STR\rt_nonfinite.pp" "STR\speed_control.pp" "SENSOR_HMC5883L\Kalman.pp" "SENSOR_HMC5883L\SENSOR_HMC5883L.pp" "QEI\QEI.pp" "MFRC522\RC522.pp" "LineFollow\LineFollow.pp" "LineFollow\PID.pp" "EEPROM\EEPROM.pp" "Button\Button.pp" "ADC\ADC.pp" 
+	-$(RM) "SystemConfig.obj" "main.obj" "tm4c123gh6pm_startup_ccs.obj" "Timer\Timer.obj" "STR\Control_initialize.obj" "STR\STR_Indirect.obj" "STR\Uocluong.obj" "STR\rtGetInf.obj" "STR\rtGetNaN.obj" "STR\rt_nonfinite.obj" "STR\speed_control.obj" "SENSOR_HMC5883L\Kalman.obj" "SENSOR_HMC5883L\SENSOR_HMC5883L.obj" "QEI\QEI.obj" "MFRC522\RC522.obj" "LineFollow\LineFollow.obj" "LineFollow\PID.obj" "EEPROM\EEPROM.obj" "Button\Button.obj" "ADC\ADC.obj" 
 	-@echo 'Finished clean'
 	-@echo ' '
 
